k8s/srcipt/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - name: name-of-service-port
      protocol: TCP
      port: 8090
      targetPort: 80
